--- a/package.json
+++ b/package.json
@@ -20,9 +20,10 @@
     "react-redux": "^8.0.7",
     "react-router-dom": "^6.11.2",
     "react-scripts": "5.0.1",
+    "react-waypoint": "^10.3.0",
+    "reactstrap": "^9.1.10",
     "redux-logger": "^3.0.6",
     "redux-saga": "^1.2.3",
-    "typescript": "^4.9.5",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
@@ -30,12 +31,6 @@
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
-  },
-  "eslintConfig": {
-    "extends": [
-      "react-app",
-      "react-app/jest"
-    ]
   },
   "browserslist": {
     "production": [
@@ -50,6 +45,9 @@
     ]
   },
   "devDependencies": {
-    "@types/redux-logger": "^3.0.9"
+    "@types/node-sass": "^4.11.3",
+    "@types/redux-logger": "^3.0.9",
+    "sass": "^1.63.3",
+    "typescript": "^5.1.3"
   }
 }
