--- a/package.json
+++ b/package.json
@@ -9,13 +9,8 @@
     "@fortawesome/react-fontawesome": "^0.2.0",
     "@ramonak/react-progress-bar": "^5.0.3",
     "@reduxjs/toolkit": "^1.9.5",
-    "@testing-library/jest-dom": "^5.16.5",
-    "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
-    "@types/jest": "^27.5.2",
     "@types/node": "^16.18.34",
-    "@types/react": "^18.2.8",
-    "@types/react-dom": "^18.2.4",
     "bootstrap": "^5.3.0",
     "react": "^18.2.0",
     "react-bootstrap": "^2.7.4",
@@ -50,9 +45,16 @@
     ]
   },
   "devDependencies": {
+    "@testing-library/jest-dom": "^5.17.0",
+    "@testing-library/react": "^14.0.0",
+    "@types/jest": "^29.5.3",
     "@types/node-sass": "^4.11.3",
+    "@types/react": "^18.2.18",
+    "@types/react-dom": "^18.2.7",
     "@types/redux-logger": "^3.0.9",
+    "jest": "^27.5.1",
     "sass": "^1.63.3",
-    "typescript": "^5.1.3"
+    "ts-jest": "^29.1.1",
+    "typescript": "^5.1.6"
   }
 }
